# multimodal_human_robot_collaboration

./: .gitignore  .~lock.Instructions to run demos with the real UR3 robot and test controller inputs.doc#  .~lock.Instructions to run demos with the simulated UR3 robot and test controller inputs.doc#  .~lock.Instructions to run demos with the simulated UR3 robot.doc#  Instructions to run demos with the real UR3 robot and test controller inputs.doc  Instructions to run demos with the simulated UR3 robot and test controller inputs.doc  Overview of HRI Robot Controller Structure.docx  README.md  requirements.txt
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/install/: setup.sh
catkin_ws/src/matlab_msg_gen_ros1/win64/src/sam_custom_messages/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
catkin_ws/src/matlab_msg_gen_ros1/win64/src/sam_custom_messages/include/sam_custom_messages/: visibility_control.h
catkin_ws/src/matlab_msg_gen_ros1/win64/src/sam_custom_messages/m/+ros/+internal/+ros/+custommessages/+sam_custom_messages/: capability.m  current_action.m  object.m  object_state.m  robot_state.m  user_prediction.m
catkin_ws/src/matlab_msg_gen_ros1/win64/src/sam_custom_messages/m/+ros/+msggen/+sam_custom_messages/: capability.m  current_action.m  hand_pos.m
catkin_ws/src/matlab_msg_gen_ros1/win64/src/sam_custom_messages/msg/: Object.msg  capability.msg  object_state.msg
catkin_ws/src/matlab_msg_gen_ros1/win64/src/sam_custom_messages/src/: sam_custom_messages_Object_common.cpp  sam_custom_messages_capability_common.cpp  sam_custom_messages_current_action_common.cpp  sam_custom_messages_diagnostics_common.cpp  sam_custom_messages_hand_pos_common.cpp  sam_custom_messages_msg_Object_publisher.cpp  sam_custom_messages_msg_Object_subscriber.cpp  sam_custom_messages_msg_capability_publisher.cpp  sam_custom_messages_msg_capability_subscriber.cpp  sam_custom_messages_msg_current_action_publisher.cpp  sam_custom_messages_msg_current_action_subscriber.cpp  sam_custom_messages_msg_diagnostics_publisher.cpp  sam_custom_messages_msg_diagnostics_subscriber.cpp  sam_custom_messages_msg_hand_pos_publisher.cpp  sam_custom_messages_msg_hand_pos_subscriber.cpp  sam_custom_messages_msg_object_state_publisher.cpp  sam_custom_messages_msg_object_state_subscriber.cpp  sam_custom_messages_msg_robot_state_publisher.cpp  sam_custom_messages_msg_robot_state_subscriber.cpp  sam_custom_messages_msg_user_prediction_publisher.cpp  sam_custom_messages_msg_user_prediction_subscriber.cpp  sam_custom_messages_object_state_common.cpp  sam_custom_messages_robot_state_common.cpp  sam_custom_messages_user_prediction_common.cpp
catkin_ws/src/optitrack_MATLAB/: assemblypath.txt  natnet_sub_callback.m  recv_hand.m  recv_rigidbody.m  ros_test.m
catkin_ws/src/sam_custom_messages/: CMakeLists.txt
catkin_ws/src/sam_nodes/: CMakeLists.txt  package.xml
optitrack_MATLAB/: diagnostic_send.m  ros_natnet.m  setup_ros_msgs.m
robot_blockstacking_demo/block_stacking/: CMakeLists.txt  package.xml
robot_blockstacking_demo/block_stacking/scripts/: basic_block_detector.py  gui.py  pub_classes.py
robot_control/: CMakeLists.txt  package.xml
robot_control/hri_static_demo/: CMakeLists.txt  package.xml
robot_control/hri_static_demo/launch/: hri_static_demo.launch  hri_static_demo_robot.launch  hri_static_demo_simulation.launch
robot_control/hri_static_demo/src/: gripper_demo.cpp  hri_static_demo.cpp
robot_control/ik_testing_package/: CMakeLists.txt  package.xml
robot_control/ik_testing_package/src/: ik_attempt.cpp  ik_attempt.py
robot_control/robotiq_gripper_control/: CMakeLists.txt  package.xml
robot_control/robotiq_gripper_control/src/: gripper_demo.cpp  gripper_demo_test.cpp  robotiq_gripper_control.cpp
sam_custom_messages/: CMakeLists.txt
sam_custom_messages/msg/: Object.msg  fastener_count.msg  object_state.msg  skeleton.msg  threeIMUs.msg
sam_nodes/: CMakeLists.txt
sam_nodes/launch/: sam_nodes.launch
sam_nodes/scripts/: Allen In_classifier_TrainOnAll_1.h5  Allen In_classifier_TrainOnAll_2.h5  Allen In_classifier_TrainOnAll_3_allclassesincl.h5  Allen In_classifier_TrainOnAll_4_allclassesincl.h5  Hammer_classifier_TrainOnAll_2.h5  Hammer_classifier_TrainOnAll_3_allclassesincl.h5  Hammer_classifier_TrainOnAll_4_allclassesincl.h5  Hand Screw In_classifier_TrainOnAll_1.h5  Hand Screw In_classifier_TrainOnAll_2.h5  Hand Screw In_classifier_TrainOnAll_3_allclassesincl.h5  Hand Screw In_classifier_TrainOnAll_4_allclassesincl.h5  IMU_collator.py  IMUmodel.h5  Screw In_classifier_TrainOnAll_2.h5  Screw In_classifier_TrainOnAll_3_allclassesincl.h5  Screw In_classifier_TrainOnAll_4_allclassesincl.h5  Task_assemble_complex_box_metadata.csv  User_1_unknown_metadata.csv  basic_block_detector.py  basic_box_classifier.h5  complex_box_classifier_allvall_1.h5  complex_box_classifier_allvall_2_allclassesincl.h5  data_hammer_x_classifier_TrainOnAll_1_acc_[0.0007419306202791631, 1.0].h5  data_screw_in_x_classifier_TrainOnAll_1_acc_[0.0030045127496123314, 0.9993076920509338].h5  fake_imu_data.csv  fake_imu_publisher.py  fake_sensor_data_publisher.py  fastener_detector_realsense.py  fastener_tracker.py  frame_convert2.py  global_data.py  gui.py  gui_old.py  im_recog_kinect.py  im_recog_realsense.py  imu_classifier.py  norm_dis_test.py  postgresql_node.py  process_skel_data.py  pub_classes.py  (+10 more)
sam_nodes/scripts/models_parameters/: Allen In_(-4)(bn)Dd(Gd)D)_timesteps15_20221003.h5  Hammer_(-4)(bn)Dd(Gd)D)_timesteps15_20221003.h5  Hand Screw In_(-4)(bn)Dd(Gd)D)_timesteps15_20221003.h5  Screw In_(-4)(bn)Dd(Gd)D)_timesteps15_20221003.h5  Screw In_model_1_2str_i(CCPCCP)s(CCPCCP)c(HHHD).h5  base_training_meta_data.csv  gestures_(-4)(bn)Dd(Gd)D)_timesteps15_20221027.h5  gestures_imuskel_classifier_2str_i(CCPCCP)s(CCPCCP)c(HHHD)_inclAllNull.h5  meta_data_users_j.csv  (+13 more)
skeleton_tracking/: .~lock.skeleton tracking kinect info.odt#  CMakeLists.txt  package.xml  skeleton tracking kinect info.odt
skeleton_tracking/launch/: skeleton_tracking.launch
skeleton_tracking/scripts/: skeletonViewer.py  video_recorder.py
(+216 files in other folders)
